MobileWizard: avoid re-scaling ui-drawing-area
Drawing areas such as those found in impress lists: chart type or slide
layout were being downsized and thus blurriness was evident.
-> Remove old CSS rule that does not serve any purpose now and fix that.

Top level drawing areas (where the whole panel is occupied by it:
slide layout) were being set with wrong position (not center
aligned).
-> Always aligned to the center without extra margins that, otherwise
would offset them

--- a/browser/css/mobilewizard.css
+++ b/browser/css/mobilewizard.css
@@ -1017,9 +1017,8 @@ input[type='checkbox'][disabled] {
 	width: 30% !important;
 }
 
-.mobile-wizard.ui-drawing-area {
+.mobile-wizard .ui-drawing-area-container:not(:only-of-type) .ui-drawing-area {
 	margin: 10px 5% !important;
-	width: 90%;
 }
 
 #TableEditPanel + .ui-content #misc_label.mobile-wizard {
